added a button with rules

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-      
+        <button id="btn"> правила: 
+            игра производится через клавишы "w"-это прыжок , "d"- это ход в право, "a"-это ход в лево , вам нужно проити путь и преодолеть 2000px и это приведет вас к победе , в худщем случае к проигрышую 
+        </button>
     <canvas>
         
         <div id="win"></div>
